--- a/Week 2.tex
+++ b/Week 2.tex
@@ -14,5 +14,7 @@
 	\begin{abstract}
 		After the introducing the essentials of web development, we will be learning how we can create a beautiful static website using HTML and CSS.
 	\end{abstract}
+	\section{HTML}
+	\section{CSS}
 	
 \end{document}
