--- a/Week 1.tex
+++ b/Week 1.tex
@@ -5,7 +5,7 @@
 \usepackage{booktabs}
 \usepackage{courier}
 
-\title{Week 1: Productivity Tools}
+\title{Productivity Tools}
 \date{2015-10-30}
 \author{Creativity Through Code}
 
@@ -40,7 +40,7 @@
 				\caption{Commonly Used Git Commands}
 				\hspace*{-2.5cm}
 				\vspace*{-5cm}
-				\begin{tabular}{p{2cm}|l|p{4cm} l}
+				\begin{tabular}{p{2cm} l p{4cm} l}
 					\toprule
 					Git Task & Command & Meaning \\
 					\midrule
