--- a/Week 2.tex
+++ b/Week 2.tex
@@ -22,6 +22,7 @@
 		After the introducing the essentials of web development, we will be learning how we can create a beautiful static website using HTML and CSS.
 	\end{abstract}
 	\section{HTML}
+		\textbf{HyperText Markup Language (HTML)} is the standard markup language used to created webpages. It is the building blocks of all websites and it provides the means to create structured documents by denoting structural semantics for text.
 		\begin{longtable}{l p{10cm} l}
 			\toprule
 			Tag & Description \\\midrule
@@ -111,8 +112,9 @@
 			\caption{Tag Descriptions}
 		\end{longtable}
 	\section{CSS}
-
+		\textbf{Cascading Style Sheets (CSS)} is a style sheet language used for describing the presention of a document/webpage written in a markup language. It is designed primarily to enable the separation of document content from document presention, including aspects such as layout, colors, and fonts. In summary, the webpage content and structure is defined by \textbf{HTML} and the webpage presentation is defined by \textbf{CSS}.
 	\section{Layout}
+		With the relase of \textbf{HTML 5}, specific layout components were introduced to structurally define a webpage better.
 		\begin{figure}[!h]
 			\CenterFloatBoxes
 			\begin{floatrow}
