Finished Week 2 and adjusted margins for week 1+2

--- a/Week 1.tex
+++ b/Week 1.tex
@@ -9,6 +9,13 @@
 \date{2015-10-30}
 \author{Creativity Through Code}
 
+\addtolength{\oddsidemargin}{-.875in}
+\addtolength{\evensidemargin}{-.875in}
+\addtolength{\textwidth}{1.75in}
+
+\addtolength{\topmargin}{-.875in}
+\addtolength{\textheight}{1.75in}
+
 \begin{document}
 	\maketitle
 	\newpage
@@ -35,11 +42,9 @@
 		\textbf{GitHub} is an essential tool for any programmer that is used for distributed version control, collaborative coding, and source code management. Projects can be uploaded to GitHub as repositories. We will be learning about both the desktop graphical interface and the command-line tool. For a list of commonly used git commands, please refer to Table 1: Commonly Used Git Commands.
 
 		\begin{table}[!htb]
-			\vspace*{-4cm}
 			\begin{center}
+				\vspace*{-2cm}
 				\caption{Commonly Used Git Commands}
-				\hspace*{-2.5cm}
-				\vspace*{-5cm}
 				\begin{tabular}{p{2cm} l p{4cm} l}
 					\toprule
 					Git Task & Command & Meaning \\
@@ -106,7 +111,6 @@
 
 					\bottomrule
 				\end{tabular}
-				\hspace*{-2cm}
 			\end{center}
 		\end{table}
 \end{document}
