--- a/Sheet-1.tex
+++ b/Sheet-1.tex
@@ -5,7 +5,7 @@
 \usepackage{booktabs}
 \usepackage{courier}
 
-\title{Productivity Tools}
+\title{Sheet 1: Productivity Tools}
 \date{2015-10-30}
 \author{Creativity Through Code}
 
