--- a/Sheet-2.tex
+++ b/Sheet-2.tex
@@ -11,7 +11,7 @@
 \graphicspath{{/}}
 
 
-\title{HTML and CSS}
+\title{Sheet 2: HTML and CSS}
 \date{2015-10-30}
 \author{Creativity Through Code}
 
